ring-table: the hover state isn't visible in the single-selection mode #RG-1289 Fixed
Former-commit-id: 4e544e5f268499ccddfa69621e2794a074db9e8c

--- a/components/table/table.css
+++ b/components/table/table.css
@@ -135,7 +135,7 @@
   }
 
   @nest .table:not(.disabledHover) &:hover {
-    background-color: #FFF;
+    background-color: #FFF!important;
   }
 
   @nest .table:not(.multiSelection) &.rowFocused,
